apps/hello-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
  labels:
    app: hello-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-web
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
      - name: hello-web
        image: quay.io/paulcapestany/hello-web:PLACEHOLDER_TAG
        ports:
        - containerPort: 8080
