apps/hello-web/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-web
spec:
  to:
    kind: Service
    name: hello-web
  port:
    targetPort: 8080
  tls:
    termination: edge
